// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`web preset should allow for corejs override 1`] = `
"\\"use strict\\";

import _Object$assign from \\"@babel/runtime-corejs3/core-js-stable/object/assign\\";
import _createClass from \\"@babel/runtime-corejs3/helpers/esm/createClass\\";
import _Map from \\"@babel/runtime-corejs3/core-js-stable/map\\";

var _Object$assign2;

var myVar = new _Map([]);

var TestClass =
/*#__PURE__*/
function () {
  function TestClass() {
    this.prop = 'prop';
  }

  _createClass(TestClass, [{
    key: \\"getterProp\\",
    get: function get() {
      return 'getter prop';
    }
  }]);

  return TestClass;
}();

TestClass.staticProp = 'static prop';
var objectA = {
  a: 'a',
  b: 'b'
};
var d = 'd';

var objectB = _Object$assign({}, objectA, (_Object$assign2 = {
  c: 'c'
}, _Object$assign2[d] = 'd', _Object$assign2));"
`;

exports[`web preset should match the snapshot 1`] = `
"\\"use strict\\";

import _Object$assign from \\"@babel/runtime-corejs2/core-js/object/assign\\";
import _createClass from \\"@babel/runtime-corejs2/helpers/esm/createClass\\";
import _Map from \\"@babel/runtime-corejs2/core-js/map\\";

var _Object$assign2;

var myVar = new _Map([]);

var TestClass =
/*#__PURE__*/
function () {
  function TestClass() {
    this.prop = 'prop';
  }

  _createClass(TestClass, [{
    key: \\"getterProp\\",
    get: function get() {
      return 'getter prop';
    }
  }]);

  return TestClass;
}();

TestClass.staticProp = 'static prop';
var objectA = {
  a: 'a',
  b: 'b'
};
var d = 'd';

var objectB = _Object$assign({}, objectA, (_Object$assign2 = {
  c: 'c'
}, _Object$assign2[d] = 'd', _Object$assign2));"
`;
